# SDK-Python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/tny_robotics/: __init__.py  tny360.py
src/tny_robotics/core/: data_reader.py  data_types.py  data_writer.py  module.py  protocol.py
src/tny_robotics/modules/: adc.py  body.py  gait.py  i2c.py  imu.py  joint.py  leg.py  motor.py  power.py  protocol.py  system.py  wifi.py
